[tool.poetry]
name = "mempool"
version = "0.1.0"
description = ""
authors = ["Murat Saglam <muratusaglam@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
confluent-kafka = "^2.5.3"
httpx = "^0.27.2"
python-dotenv = "^1.0.1"
web3 = "^7.2.0"
pydantic = "^2.9.1"
pydantic-settings = "^2.5.2"
ruff = "^0.6.5"
pytest-asyncio = "^0.24.0"
jsonschema = "^4.23.0"
eth-pydantic-types = "^0.1.3"
pandas = "^2.2.3"
pandas-stubs = "^2.2.2.240909"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-env = "^1.1.4"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
env_files = [".env"]